assets/sass/components/map.scss
@use '../variables' as *;
@use '../tokens/space';
@use '../../../node_modules/mapbox-gl/dist/mapbox-gl.css';
@use '../../../node_modules/mapbox-gl-style-switcher/styles.css';

.map {
  @media (min-width: $breakpoint-m) {
    .header {
      position: absolute;
      z-index: 20;
    }

    h1 {
      margin-bottom: space.$s;
      text-shadow: 1px 1px 1rem rgba(0, 0, 0, 0.7);
    }
  }
}

#map {
  margin-left: - space.$m;
  margin-right: - space.$m;
  width: 100vw;

  // = Full height: 100vh
  // - body padding: space.$m
  // - logo: calc(var(--logo-wide) / 9)
  // - header gap: space.$m
  // - navigation: $line-height * var(--step-0)
  // - page gap: space.$xl
  // - breadcrumb: $line-height * var(--step--1)
  // - title: 1.2 * var(--step-3)
  // - 2 grid gaps: 2 * space.$s
  height: calc(100vh - #{space.$m} - calc(var(--logo-wide) / 9) - #{space.$m} - #{$line-height} * var(--step-0) - #{space.$xl} - #{$line-height} * var(--step--1) - 1.2 * var(--step-4) - 2 * #{space.$s});

  @media (min-width: $breakpoint-m) {
    position: relative;
    top: - space.$m;
    left: - space.$xxl;
    margin-left: 0;
    margin-right: 0;
    width: calc(100% + space.$xxl * 2);
    height: 100vh;

    z-index: 10;

    .mapboxgl-ctrl-top-right {
      top: space.$xxl;
      right: space.$xxl;
    }
  }


  .mapboxgl-popup {
    width: 220px;
  }

  .mapboxgl-popup-content {
    background-color: $color-surface;
    width: calc(200px + 2px + 2 * space.$xxxs);

    img {
      border: 1px solid #fff;
    }
  }

  .mapboxgl-popup-photos {
    padding: space.$xxxs;
    max-height: 300px;
    overflow-y: scroll;

    p {
      margin-top: 0;
    }

    p + p {
      margin-top: space.$s;
    }
  }

  .mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
    border-right-color: $color-surface;
  }

  .mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
    border-left-color: $color-surface;
  }

  .mapboxgl-popup-anchor-bottom-left,
  .mapboxgl-popup-anchor-bottom-right,
  .mapboxgl-popup-anchor-bottom {
    .mapboxgl-popup-tip {
      border-top-color: $color-surface;
    }
  }

  .mapboxgl-popup-anchor-top-left,
  .mapboxgl-popup-anchor-top-right,
  .mapboxgl-popup-anchor-top {
    .mapboxgl-popup-tip {
      border-bottom-color: $color-surface;
    }
  }

  .mapboxgl-popup-close-button {
    padding: 0;
    line-height: 1;
    right: 1px;
    top: -3px;
    font-size: 14px;
    color: #ffffff;
  }
}

